Improve cypress tests
Renable commented tests, make sure all turbo setup is correct on admin and all works as expected

--- a/app/views/admin/educations/destroy.turbo_stream.erb
+++ b/app/views/admin/educations/destroy.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.remove @education %>
-<%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.deleted', model: Education) } %>
+<%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.deleted', model: Education.model_name.human) } %>
