--- a/app/views/admin/work_experiences/destroy.turbo_stream.erb
+++ b/app/views/admin/work_experiences/destroy.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.remove @work_experience %>
-<%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.deleted', model: WorkExperience) } %>
+<%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.deleted', model: WorkExperience.model_name.human) } %>
