--- a/app/views/admin/about/_form.html.erb
+++ b/app/views/admin/about/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:admin, about]) do |f| %>
+<%= simple_form_for([:admin, about], data: { turbo: false }) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
