--- a/app/views/admin/educations/update.turbo_stream.erb
+++ b/app/views/admin/educations/update.turbo_stream.erb
@@ -2,5 +2,5 @@
   <%= turbo_stream.replace dom_id(@education), partial: 'form', locals: { education: @education } %>
 <% else %>
   <%= turbo_stream.replace dom_id(@education), partial: 'education', locals: { education: @education.decorate } %>
-  <%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.updated', model: Education) } %>
+  <%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.updated', model: Education.model_name.human) } %>
 <% end %>
