--- a/app/views/admin/skills/_form.html.erb
+++ b/app/views/admin/skills/_form.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag skill do %>
+<%= turbo_frame_tag skill, class: "col-md-6 pt-3 item" do %>
   <%= simple_form_for([:admin, skill]) do |f| %>
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
