--- a/app/views/admin/skills/create.turbo_stream.erb
+++ b/app/views/admin/skills/create.turbo_stream.erb
@@ -1,7 +1,7 @@
 <% if @skill.persisted? %>
   <%= turbo_stream.append "skills_#{@skill.locale.downcase}", partial: 'skill', locals: { skill: @skill.decorate } %>
   <%= turbo_stream.replace 'modal', partial: 'admin/shared/modal', locals: { model: Skill } %>
-  <%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.created', model: Skill) } %>
+  <%= turbo_stream.replace 'notifications', partial: 'admin/shared/notification', locals: { notice: t('helpers.created', model: Skill.model_name.human) } %>
 <% else %>
   <%= turbo_stream.replace 'new_skill', partial: 'form', locals: { skill: @skill } %>
 <% end %>
