--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag work_experience do %>
+<%= turbo_frame_tag work_experience, class: "col-md-6 pt-3 item" do %>
   <%= simple_form_for([:admin, work_experience]) do |f| %>
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
