--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
   <%= favicon_link_tag 'icons/favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: '32x32' %>
   <%= favicon_link_tag 'icons/favicon-96x96.png', rel: 'icon', type: 'image/png', sizes: '96x96' %>
   <%= favicon_link_tag 'icons/favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: '16x16' %>
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#262b37">
   <meta name="msapplication-TileImage" content="<%= asset_url('icons/ms-icon-144x144.png') %>">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#262b37">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%=@about.description%>" />
   <!-- Open Graph Tags -->
