--- a/app/assets/stylesheets/admin/_bootstrap.scss
+++ b/app/assets/stylesheets/admin/_bootstrap.scss
@@ -1,17 +1,29 @@
+// scss-docs-start import-stack
+// Configuration
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/variables-dark';
+@import 'bootstrap/scss/maps';
 @import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/utilities';
+
+// Layout & components
 @import 'bootstrap/scss/root';
 @import 'bootstrap/scss/reboot';
 @import 'bootstrap/scss/type';
+@import 'bootstrap/scss/containers';
 @import 'bootstrap/scss/grid';
 @import 'bootstrap/scss/forms';
 @import 'bootstrap/scss/buttons';
-@import 'bootstrap/scss/custom-forms';
 @import 'bootstrap/scss/nav';
 @import 'bootstrap/scss/navbar';
 @import 'bootstrap/scss/alert';
 @import 'bootstrap/scss/list-group';
-@import 'bootstrap/scss/utilities';
-@import 'bootstrap/scss/modal';
 @import 'bootstrap/scss/close';
+@import 'bootstrap/scss/modal';
+// Helpers
+@import 'bootstrap/scss/helpers';
+
+// Utilities
+@import 'bootstrap/scss/utilities/api';
+// scss-docs-end import-stack
