--- a/app/views/admin/work_experiences/_work_experience.html.erb
+++ b/app/views/admin/work_experiences/_work_experience.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag work_experience, class: "col-md-6 pt-3 item", data: { id: work_experience.id } do %>
+<%= turbo_frame_tag work_experience, class: "col-md-6 pt-3 item list-group", data: { id: work_experience.id } do %>
   <div class="list-group-item flex-column align-items-start">
     <div class="d-flex justify-content-between pb-2 pt-2">
       <h5 class="mb-1"><%= work_experience.company_name %></h5>
