--- a/app/views/download/_about.html.erb
+++ b/app/views/download/_about.html.erb
@@ -2,7 +2,7 @@
   <div class="col left">
     <h1><%= t(:name, scope: %i[frontend template]) %></h1>
     <div class="description"><%= markdown @about.description %></div>
-    <p class="note"><%= t(:spoken_languages, scope: %i[cv], languages: spoken_languages) %></p>
+    <p class="note"><%= t(:spoken_languages, scope: %i[cv], languages: @about.spoken_languages) %></p>
   </div>
   <div class="col right">
     <%= image_tag asset_url('frontend/gmmcal.png'), alt: t(:name, scope: %i[frontend template]), itemprop: "image" %>
