--- a/app/views/admin/user/_form.html.erb
+++ b/app/views/admin/user/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :first_name %>
     <%= f.input :last_name %>
-    <%= f.input :email, required: true %>
+    <%= f.input :email_address, required: true %>
     <%= f.input :default_locale %>
   </div>
 
