--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,7 +19,7 @@
             <%= link_to User.model_name.human, %i[edit admin user], class: menu_classes(:user) %>
           </li>
           <li class="nav-item">
-            <%= link_to t(:sign_out, scope: %i[devise shared links]), %i[destroy user session], data: { turbo_method: :delete }, class: 'nav-link' %>
+            <%= link_to t(:sign_out, scope: %i[admin shared links]), %i[admin session], data: { turbo_method: :delete }, class: 'nav-link' %>
           </li>
         </ul>
       </nav>
