NEW: Introduce Lexxy as WYSIWYG editor
Closes #109 and #111

Also changed:

* Introduce ActionText
* Move to propshaft
* Default to rails 8.1 settings
* Remove markdown
* Migrate data from old markdown to ActionText
* Cleanup what is not needed (migration files)
* Update fontawesome to latest version

--- a/app/assets/stylesheets/admin/bootstrap.css
+++ b/app/assets/stylesheets/admin/bootstrap.css
@@ -4056,7 +4056,7 @@ textarea.form-control-lg {
 
 .modal {
   --bs-modal-zindex: 1055;
-  --bs-modal-width: 500px;
+  --bs-modal-width: 75%;
   --bs-modal-padding: 1rem;
   --bs-modal-margin: 0.5rem;
   --bs-modal-color: ;
