--- a/app/views/admin/about/_about.html.erb
+++ b/app/views/admin/about/_about.html.erb
@@ -9,7 +9,7 @@
         </div>
       </div>
     </div>
-    <%= markdown about.description %>
+    <%= about.description %>
     <small class="d-block pb-1"><%= About.human_attribute_name(:city) %>: <%= about.city %></small>
     <small class="d-block pb-1"><%= About.human_attribute_name(:country) %>: <%= about.country_name %></small>
     <small class="d-block pb-1"><%= About.human_attribute_name(:phone_number) %>: <%= about.phone_number %></small>
