--- a/app/views/admin/educations/_education.html.erb
+++ b/app/views/admin/educations/_education.html.erb
@@ -11,6 +11,6 @@
       </div>
     </div>
     <h6 class="mb-3"><%= education.institution %></h6>
-    <%= markdown education.description %>
+    <%= education.description %>
   </div>
 <% end %>
