--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :country, collection: Country.all %>
       <%= f.input :start_date, include_blank: true %>
       <%= f.input :end_date, include_blank: true %>
-      <%= f.input :description %>
+      <%= f.input :description, as: :rich_text_area, attachments: false %>
       <%= f.input :locale %>
     </div>
 
