--- a/app/views/educations/_education.html.erb
+++ b/app/views/educations/_education.html.erb
@@ -9,7 +9,7 @@
     <div class="ex-con">
       <h4><%= education.institution %></h4>
       <h5><%= education.course %></h5>
-      <div class="description"><%= markdown education.description %></div>
+      <div class="description"><%= education.description %></div>
     </div>
   </div>
 </div>
