--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= javascript_importmap_tags("admin/application") %>
     <%= stylesheet_link_tag 'admin/application', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/bootstrap', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/content', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/mdb', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'lexxy', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
     <%= csrf_meta_tags %>
     <meta name="theme-color" content="#212121">
   </head>
