--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= t(:title, scope: %i[frontend helpers]) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/application', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/bootstrap', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/content', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'admin/mdb', media: 'all', 'data-turbo-track': 'reload', rel: 'stylesheet' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
