--- a/app/views/work_experiences/_work_experience.html.erb
+++ b/app/views/work_experiences/_work_experience.html.erb
@@ -10,7 +10,7 @@
     <div class="ex-con">
       <h4><span><%= work_experience.company_name %></span> - <span><span><%= work_experience.city %></span> - <span><%= work_experience.country %></span></span></h4>
       <h5><%= work_experience.position %></h5>
-      <div class="description"><%= markdown work_experience.description %></div>
+      <div class="description"><%= work_experience.description %></div>
     </div>
   </div>
 </div>
