--- a/app/views/abouts/_about.html.erb
+++ b/app/views/abouts/_about.html.erb
@@ -8,7 +8,7 @@
         <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 pb-48 details">
           <h3><%= t('name', scope: %i[frontend template]) %></h3>
           <h4 class="sub-heading"><%= @about.job_title %></h4>
-          <div class="description"><%= markdown(@about.description) %></div>
+          <div class="description"><%= @about.description %></div>
           <a href="<%= @about.cv %>" class="btn-download" data-turbo="false" rel="noopener"><%= t('file_title', scope: %i[frontend about])%></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 offset-lg-1 image">
