--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -6,7 +6,7 @@
     <div class="form-inputs">
       <%= f.input :course %>
       <%= f.input :institution %>
-      <%= f.input :description %>
+      <%= f.input :description, as: :rich_text_area, attachments: false %>
       <%= f.input :start_date, include_blank: true %>
       <%= f.input :end_date, include_blank: true %>
       <%= f.input :locale %>
