--- a/app/views/admin/work_experiences/_work_experience.html.erb
+++ b/app/views/admin/work_experiences/_work_experience.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
     </div>
-    <%= markdown work_experience.description %>
+    <%= work_experience.description %>
     <small class="d-block pb-1"><%= About.human_attribute_name(:position) %>: <%= work_experience.position %></small>
     <small class="d-block pb-1"><%= About.human_attribute_name(:city) %>: <%= work_experience.city %></small>
     <small class="d-block pb-1"><%= About.human_attribute_name(:country) %>: <%= work_experience.country_name %></small>
